--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,13 @@
 
 body {
     font-family: sans-serif;
-    background-color: pink;
+    background-color: white;
 }
 
 #grid {
     display: flex;
     flex-wrap: wrap;
+    margin: 20px;
 }
 
 #grid>div {
